fix svg on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,7 +63,7 @@ body {
 }
 
 body::-webkit-scrollbar {
-  scrollbar-width: none;
+  display: none;
 }
 
 .App {
