--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -146,7 +146,7 @@
 
   & svg {
     display: block;
-    width: 1.6rem;
+    min-width: 1.6rem;
     fill: var(--color-text);
   }
 
