--- a/src/modules/CartPage/components/ProductCart/ProductCart.module.scss
+++ b/src/modules/CartPage/components/ProductCart/ProductCart.module.scss
@@ -123,6 +123,7 @@
   fill: var(--color-primary);
 
   & svg {
+    min-width: 1.6rem;
     height: 100%;
   }
 
